main | fix temperature 0.0 is not valid

--- a/ui_lovelace_minimalist/custom_cards/custom_card_broadlink_tadiran/custom_card_broadlink_tadiran.yaml
+++ b/ui_lovelace_minimalist/custom_cards/custom_card_broadlink_tadiran/custom_card_broadlink_tadiran.yaml
@@ -228,7 +228,7 @@ card_broadlink_tadiran:
                   target_temp_low: |
                     [[[
                       if (entity.attributes.target_temp_low == null) {
-                        return 0;
+                        return 23;
                       } else {
                         const unit = hass.config.unit_system.temperature
                         const step = variables.ulm_card_thermostat_temp_step || entity.attributes.target_temp_step || (unit == '°F' ? 1.0 : 0.5)
@@ -239,7 +239,7 @@ card_broadlink_tadiran:
                   target_temp_high: |
                     [[[
                       if (entity.attributes.target_temp_low == null) {
-                        return 0;
+                        return 23;
                       } else {
                         const unit = hass.config.unit_system.temperature
                         const step = variables.ulm_card_thermostat_temp_step || entity.attributes.target_temp_step || (unit == '°F' ? 1.0 : 0.5)
@@ -249,11 +249,11 @@ card_broadlink_tadiran:
                   temperature: |
                     [[[
                       if (entity.attributes.temperature == null) {
-                        return 0;
+                        return 23;
                       } else {
                         const unit = hass.config.unit_system.temperature
                         const step = variables.ulm_card_thermostat_temp_step || entity.attributes.target_temp_step || (unit == '°F' ? 1.0 : 0.5)
-                        return (parseFloat(states[entity.entity_id].attributes.temperature) - step)
+                        return (parseFloat(entity.attributes.temperature) - step)
                       }
                     ]]]
                   entity_id: "[[[ return entity.entity_id ]]]"
@@ -298,7 +298,7 @@ card_broadlink_tadiran:
                   target_temp_low: |
                     [[[
                       if (entity.attributes.target_temp_low == null) {
-                        return 0;
+                        return 23;
                       } else {
                         return entity.attributes.target_temp_low;
                       }
@@ -306,7 +306,7 @@ card_broadlink_tadiran:
                   target_temp_high: |
                     [[[
                       if (entity.attributes.target_temp_high == null) {
-                        return 0;
+                        return 23;
                       } else {
                         const unit = hass.config.unit_system.temperature
                         const step = variables.ulm_card_thermostat_temp_step || entity.attributes.target_temp_step || (unit == '°F' ? 1.0 : 0.5)
@@ -316,11 +316,11 @@ card_broadlink_tadiran:
                   temperature: |
                     [[[
                       if (entity.attributes.temperature == null) {
-                        return 0;
+                        return 23;
                       } else {
                         const unit = hass.config.unit_system.temperature
                         const step = variables.ulm_card_thermostat_temp_step || entity.attributes.target_temp_step || (unit == '°F' ? 1.0 : 0.5)
-                        return (parseFloat(states[entity.entity_id].attributes.temperature) + step)
+                        return (parseFloat(entity.attributes.temperature) + step)
                       }
                     ]]]
                   entity_id: "[[[ return entity.entity_id ]]]"
