--- a/ui_lovelace_minimalist/dashboard/ui-lovelace-01.yaml
+++ b/ui_lovelace_minimalist/dashboard/ui-lovelace-01.yaml
@@ -5,12 +5,6 @@ title: "My Home"
 background: "var(--background-image)"
 show_in_sidebar: false
 views:
-  - !include views/home.yaml
-  - !include views/person/dad.yaml
-  - !include views/person/mom.yaml
+  - !include views/home-01.yaml
   - !include views/person/01_kid.yaml
-  - !include views/room/bedroom-01.yaml
   - !include views/room/bedroom-03.yaml
-  - !include views/room/bedroom-04.yaml
-  - !include views/room/bedroom-05.yaml
-  - !include views/room/livingroom.yaml
