--- a/configuration.yaml
+++ b/configuration.yaml
@@ -22,6 +22,12 @@ lovelace:
       icon: mdi:flower
       show_in_sidebar: true
       filename: ui_lovelace_minimalist/dashboard/ui-lovelace.yaml
+    db-01:
+      mode: yaml
+      title: !secret 01_kid_name
+      icon: mdi:teddy-bear
+      show_in_sidebar: true
+      filename: ui_lovelace_minimalist/dashboard/ui-lovelace-01.yaml
 
 # Load frontend themes from the themes folder
 frontend:
