main | tuya cloud devices managed through secrets

--- a/ui_lovelace_minimalist/dashboard/views/home-01.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home-01.yaml
@@ -69,7 +69,7 @@ cards:
               - !secret sensor_main_door
           - type: "custom:button-card"
             template: card_power_outlet
-            entity: switch.water_heater
+            entity: !secret water_heater
             variables:
               ulm_card_power_outlet_name: Water Heater
               ulm_card_power_outlet_icon: mdi:power
