--- a/ui_lovelace_minimalist/dashboard/views/home-tablet.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home-tablet.yaml
@@ -15,7 +15,16 @@ layout:
 cards:
   - type: vertical-stack
     cards:
-      # card_esh_welcome #
+      # card_esh_welcome & weather #
+      - type: custom:simple-clock-card
+        use_military: true
+        hide_seconds: false
+        bold_clock: false
+        font_size: 7rem
+        paddingLeft_size: 32px
+        paddingRight_size: 32px
+        paddingTop_size: 32px
+        paddingBottom_size: 32px
       - type: "custom:button-card"
         template: "card_esh_welcome"
         triggers_update: "input_boolean.mini_toggle"
@@ -47,6 +56,13 @@ cards:
             icon: "mdi:flask"
             name: Lab
             color: "red"
+      - type: weather-forecast
+        entity: weather.forecast_home
+        name: Home
+        show_current: true
+        show_forecast: true
+        forecast_type: daily
+        # secondary_info_attribute: sun.sun
     view_layout:
       grid-area: left
   - type: vertical-stack
@@ -75,8 +91,8 @@ cards:
               ulm_card_person_use_entity_picture: true
               ulm_card_person_icon: mdi:face-woman
               ulm_card_person_battery: !secret mom_phone_battery_level
-      # - type: horizontal-stack
-      #   cards:
+          # - type: horizontal-stack
+          #   cards:
           - type: "custom:button-card"
             template: card_person
             tap_action:
@@ -87,8 +103,8 @@ cards:
               ulm_card_person_use_entity_picture: true
               ulm_card_person_icon: mdi:face-woman
               ulm_card_person_battery: !secret 01_kid_phone_battery_level
-          - type: "custom:button-card"
-            color_type: blank-card
+          # - type: "custom:button-card"
+          #   color_type: blank-card
       # card_title devices #
       - type: "custom:button-card"
         template: card_title
