--- a/ui_lovelace_minimalist/dashboard/views/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home.yaml
@@ -162,7 +162,7 @@ cards:
               action: navigate
               navigation_path: bedroom-01
             variables:
-              ulm_custom_card_esh_room_cover_entity: !secret roller_bedroom_01
+              ulm_custom_card_esh_room_light_entity: group.lights_bedroom_01
               ulm_custom_card_esh_room_climate_entity: climate.ac_bedroom_main
             label: Main
           - type: "custom:button-card"
