--- a/ui_lovelace_minimalist/custom_cards/custom_card_esh_room_dev/custom_card_esh_room_dev.yaml
+++ b/ui_lovelace_minimalist/custom_cards/custom_card_esh_room_dev/custom_card_esh_room_dev.yaml
@@ -56,13 +56,13 @@ card_esh_room_dev:
       - grid-template-areas: >-
           [[[{
             if (variables.ulm_custom_card_esh_room_light_entity && variables.ulm_custom_card_esh_room_climate_entity && variables.ulm_custom_card_esh_room_cover_entity) {
-              return "'i light' 'n climate' 'l climate' 'c cover'";
+              return " 'n climate' 'c cover' 'l cover' 'i light'";
             } else if (variables.ulm_custom_card_esh_room_light_entity && variables.ulm_custom_card_esh_room_cover_entity) {
-              return "'i light' 'n cover' 'l cover'";
+              return "'n cover' 'l light' 'i light'";
             } else if (variables.ulm_custom_card_esh_room_climate_entity && variables.ulm_custom_card_esh_room_cover_entity) {
               return "'i climate' 'n cover' 'l cover'";
             } else if (variables.ulm_custom_card_esh_room_light_entity && variables.ulm_custom_card_esh_room_climate_entity) {
-              return "'i light' 'l climate' 'n climate'";
+              return "'i climate' 'n light' 'l light'";
             } else if (variables.ulm_custom_card_esh_room_light_entity) {
               return "'i light' 'n light' 'l light'";
             } else if (variables.ulm_custom_card_esh_room_climate_entity) {
@@ -263,6 +263,16 @@ card_esh_room_dev:
           - value: "off"
             icon: "[[[ return variables.ulm_card_esh_room_light_icon_off; ]]]"
         type: "custom:button-card"
+        styles:
+          card:
+            - margin-top: >-
+                [[[
+                  if (variables.ulm_custom_card_esh_room_light_entity) {
+                    return "5px";
+                  } else {
+                    return "0px";
+                  }
+                ]]]
         template:
           - "widget_icon"
           - "ulm_actions_card"
@@ -335,10 +345,8 @@ card_esh_room_dev:
           card:
             - margin-top: >-
                 [[[
-                  if  (variables.ulm_custom_card_esh_room_light_entity && variables.ulm_custom_card_esh_room_cover_entity) {
-                    return "5px";
-                  } else if (variables.ulm_custom_card_esh_room_light_entity) {
-                    return "5px";
+                  if (variables.ulm_custom_card_esh_room_climate_entity) {
+                    return "0px";
                   } else {
                     return "0px";
                   }
