--- a/ui_lovelace_minimalist/dashboard/views_dev/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views_dev/home.yaml
@@ -126,8 +126,9 @@ cards:
               ulm_custom_card_esh_room_light_entity: !secret garden_light_trees
               ulm_custom_card_esh_room_climate_entity: climate.ac_livingroom
               ulm_custom_card_esh_room_cover_entity: group.rollers_livingroom
-            label: "🌡️ labelToAdd"
-      # card_esh_room laly & guest #
+            label: |
+              "🌡️ " climate.ac_main
+        # card_esh_room laly & guest #
       - type: horizontal-stack
         cards:
           - type: "custom:button-card"
