--- a/ui_lovelace_minimalist/dashboard/views/room/livingroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/room/livingroom.yaml
@@ -14,17 +14,18 @@ cards:
 
       - type: "custom:button-card"
         template: card_broadlink_tadiran
-        entity: climate.ac_livingroom
+        entity: climate.ac_main
         variables:
           ulm_card_thermostat_name: AC
           ulm_card_thermostat_icon: mdi:power
           ulm_card_thermostat_enable_controls: true
           ulm_card_thermostat_enable_hvac_modes: true
+          ulm_card_thermostat_enable_display_temperature: true
           ulm_translation_state: >-
             [[[
               return entity.state.charAt(0).toUpperCase() + entity.state.slice(1);
             ]]]
-      
+
       - type: horizontal-stack
         cards:
           - type: "custom:button-card"
@@ -36,7 +37,7 @@ cards:
               ulm_card_cover_enable_slider: true
               ulm_card_cver_favorite_percentage: 45
               ulm_card_cover_color: yellow
-          
+
           - type: "custom:button-card"
             template: card_cover
             entity: !secret roller_kitchen
@@ -49,20 +50,20 @@ cards:
 
       - type: horizontal-stack
         cards:
-        - type: "custom:button-card"
-          template: card_light
-          entity: !secret garden_light_trees
-          variables:
-            ulm_card_light_name: Garden Lights
-            ulm_card_light_enable_color: true
-            ulm_card_light_force_background_color: true
-        
-        - type: "custom:button-card"
-          template: card_media_player
-          entity: !secret tv_livingroom
-          variables:
-            ulm_card_media_player_name : TV
-            ulm_card_media_player_enable_volume_buttons: true
-            ulm_card_media_player_power_button: true
-            ulm_card_media_player_collapsible: true
-            ulm_card_media_player_color: yellow
+          - type: "custom:button-card"
+            template: card_light
+            entity: !secret garden_light_trees
+            variables:
+              ulm_card_light_name: Garden Lights
+              ulm_card_light_enable_color: true
+              ulm_card_light_force_background_color: true
+
+          - type: "custom:button-card"
+            template: card_media_player
+            entity: !secret tv_livingroom
+            variables:
+              ulm_card_media_player_name: TV
+              ulm_card_media_player_enable_volume_buttons: true
+              ulm_card_media_player_power_button: true
+              ulm_card_media_player_collapsible: true
+              ulm_card_media_player_color: yellow
