--- a/ui_lovelace_minimalist/dashboard/views/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home.yaml
@@ -116,7 +116,7 @@ cards:
               navigation_path: livingroom
             variables:
               ulm_custom_card_esh_room_light_entity: !secret garden_light_trees
-              ulm_custom_card_esh_room_climate_entity: climate.ac_livingroom
+              ulm_custom_card_esh_room_climate_entity: climate.ac_main
               ulm_custom_card_esh_room_cover_entity: group.rollers_livingroom
               temperature_entity: !secret bathroom_temperature
             label: "🌡️ LabelToAdd"
