--- a/ui_lovelace_minimalist/dashboard/views/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home.yaml
@@ -80,13 +80,13 @@ cards:
       - type: horizontal-stack
         cards:
           - type: "custom:button-card"
-            entity: lock.smart_lock
+            entity: !secret lock_entity
             template: "custom_card_lock_gimdow"
             name: "Main Door"
             variables:
               custom_card_lock_gimdow_language_variables: en
               ulm_custom_card_lock_tap_control: true
-              ulm_custom_card_lock_battery_level: lock.smart_lock
+              ulm_custom_card_lock_battery_level: !secret lock_battery
               ulm_custom_card_lock_door_open: !secret sensor_main_door
             triggers_update:
               - entity.attributes.battery_state
