--- a/ui_lovelace_minimalist/dashboard/views_dev/room/bedroom-04.yaml
+++ b/ui_lovelace_minimalist/dashboard/views_dev/room/bedroom-04.yaml
@@ -30,6 +30,7 @@ cards:
           ulm_card_thermostat_icon: mdi:power
           ulm_card_thermostat_enable_controls: true
           ulm_card_thermostat_enable_hvac_modes: true
+          ulm_card_thermostat_enable_display_temperature: true
           ulm_translation_state: >-
             [[[
               return entity.state.charAt(0).toUpperCase() + entity.state.slice(1);
