--- a/ui_lovelace_minimalist/dashboard/views_dev/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views_dev/home.yaml
@@ -15,7 +15,7 @@ layout:
     # "(max-width: 800px)":
     #   grid-template-columns: 50% 50%
     #   grid-template-areas: |
-    #     "left right" 
+    #     "left right"
     #     "middle middle"
 cards:
   - type: vertical-stack
@@ -52,6 +52,14 @@ cards:
             icon: "mdi:flask"
             name: Lab
             color: "red"
+      - type: "custom:button-card"
+        template: custom_card_camera
+        entity: !secret camera_front_door
+        show_icon: true
+        variables:
+          ulm_custom_card_camera_title: true
+          ulm_custom_card_camera_name: "Front Door"
+          ulm_custom_card_camera_aspect_ratio: '16:9'
     view_layout:
       grid-area: left
   - type: vertical-stack
@@ -201,6 +209,10 @@ cards:
             #   navigation_path: bedroom-05
             variables:
               ulm_card_media_player_name: TV
+              ulm_card_media_player_enable_volume_buttons: true
+              ulm_card_media_player_power_button: true
+              ulm_card_media_player_collapsible: true
+              ulm_card_media_player_color: yellow
 
           - type: "custom:button-card"
             template: card_light
