main | lock_g4 added to all home views

--- a/ui_lovelace_minimalist/dashboard/views/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home.yaml
@@ -81,7 +81,7 @@ cards:
         cards:
           - type: "custom:button-card"
             entity: !secret lock_entity
-            template: "custom_card_lock_gimdow"
+            template: "custom_card_lock_g4"
             name: "Main Door"
             variables:
               custom_card_lock_gimdow_language_variables: en
