--- a/ui_lovelace_minimalist/dashboard/views/home-tablet.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home-tablet.yaml
@@ -15,8 +15,7 @@ layout:
 cards:
   - type: vertical-stack
     cards:
-      # weather & camera #
-            # clock # 
+      # clock & weather & camera #
       - type: custom:simple-clock-card
         use_military: true
         hide_seconds: false
@@ -92,7 +91,7 @@ cards:
         cards:
           - type: "custom:button-card"
             entity: !secret lock_entity
-            template: "custom_card_lock_gimdow"
+            template: "custom_card_lock_g4"
             name: "Main Door"
             variables:
               custom_card_lock_gimdow_language_variables: en
