--- a/ui_lovelace_minimalist/custom_cards/custom_card_broadlink_tadiran/custom_card_broadlink_tadiran.yaml
+++ b/ui_lovelace_minimalist/custom_cards/custom_card_broadlink_tadiran/custom_card_broadlink_tadiran.yaml
@@ -222,14 +222,14 @@ card_broadlink_tadiran:
               entity: "[[[ return entity.entity_id ]]]"
               icon: "mdi:minus"
               tap_action:
-                action: "call-service"
-                service: "climate.set_temperature"
-                service_data:
+                action: "perform-action"
+                perform_action: "climate.set_temperature"
+                target:
+                  entity_id: "[[[ return entity.entity_id ]]]"
+                data:
                   target_temp_low: |
                     [[[
-                      if (entity.attributes.target_temp_low == null) {
-                        return 23;
-                      } else {
+                      if (entity.attributes.target_temp_low !== undefined) {
                         const unit = hass.config.unit_system.temperature
                         const step = variables.ulm_card_thermostat_temp_step || entity.attributes.target_temp_step || (unit == '°F' ? 1.0 : 0.5)
                         const new_temp =  (parseFloat(entity.attributes.target_temp_high) - step)
@@ -238,9 +238,7 @@ card_broadlink_tadiran:
                     ]]]
                   target_temp_high: |
                     [[[
-                      if (entity.attributes.target_temp_low == null) {
-                        return 23;
-                      } else {
+                      if (entity.attributes.target_temp_low !== undefined) {
                         const unit = hass.config.unit_system.temperature
                         const step = variables.ulm_card_thermostat_temp_step || entity.attributes.target_temp_step || (unit == '°F' ? 1.0 : 0.5)
                         return (parseFloat(entity.attributes.target_temp_high) - step)
@@ -248,15 +246,12 @@ card_broadlink_tadiran:
                     ]]]
                   temperature: |
                     [[[
-                      if (entity.attributes.temperature == null) {
-                        return 23;
-                      } else {
+                      if (entity.attributes.temperature !== undefined) {
                         const unit = hass.config.unit_system.temperature
                         const step = variables.ulm_card_thermostat_temp_step || entity.attributes.target_temp_step || (unit == '°F' ? 1.0 : 0.5)
                         return (parseFloat(entity.attributes.temperature) - step)
                       }
                     ]]]
-                  entity_id: "[[[ return entity.entity_id ]]]"
               state:
                 - operator: "template"
                   value: >
@@ -292,22 +287,20 @@ card_broadlink_tadiran:
               entity: "[[[ return entity.entity_id ]]]"
               icon: "mdi:plus"
               tap_action:
-                action: "call-service"
-                service: "climate.set_temperature"
-                service_data:
+                action: "perform-action"
+                perform_action: "climate.set_temperature"
+                target:
+                  entity_id: "[[[ return entity.entity_id ]]]"
+                data:
                   target_temp_low: |
                     [[[
-                      if (entity.attributes.target_temp_low == null) {
-                        return 23;
-                      } else {
+                      if (entity.attributes.target_temp_low !== undefined) {
                         return entity.attributes.target_temp_low;
                       }
                     ]]]
                   target_temp_high: |
                     [[[
-                      if (entity.attributes.target_temp_high == null) {
-                        return 23;
-                      } else {
+                      if (entity.attributes.target_temp_low !== undefined) {
                         const unit = hass.config.unit_system.temperature
                         const step = variables.ulm_card_thermostat_temp_step || entity.attributes.target_temp_step || (unit == '°F' ? 1.0 : 0.5)
                         return (parseFloat(entity.attributes.target_temp_high) + step)
@@ -315,15 +308,12 @@ card_broadlink_tadiran:
                     ]]]
                   temperature: |
                     [[[
-                      if (entity.attributes.temperature == null) {
-                        return 23;
-                      } else {
+                      if (entity.attributes.temperature !== undefined) {
                         const unit = hass.config.unit_system.temperature
                         const step = variables.ulm_card_thermostat_temp_step || entity.attributes.target_temp_step || (unit == '°F' ? 1.0 : 0.5)
                         return (parseFloat(entity.attributes.temperature) + step)
                       }
                     ]]]
-                  entity_id: "[[[ return entity.entity_id ]]]"
               state:
                 - operator: "template"
                   value: >
@@ -348,9 +338,11 @@ card_broadlink_tadiran:
               entity: "[[[ return entity.entity_id ]]]"
               icon: "mdi:minus"
               tap_action:
-                action: "call-service"
-                service: "climate.set_temperature"
-                service_data:
+                action: "perform-action"
+                perform_action: "climate.set_temperature"
+                target:
+                  entity_id: "[[[ return entity.entity_id ]]]"
+                data:
                   target_temp_low: |
                     [[[
                       const unit = hass.config.unit_system.temperature
@@ -358,7 +350,6 @@ card_broadlink_tadiran:
                       return (parseFloat(entity.attributes.target_temp_low) - step)
                     ]]]
                   target_temp_high: "[[[ return entity.attributes.target_temp_high ]]]"
-                  entity_id: "[[[ return entity.entity_id ]]]"
               state:
                 - operator: "template"
                   value: >
@@ -394,9 +385,11 @@ card_broadlink_tadiran:
               entity: "[[[ return entity.entity_id ]]]"
               icon: "mdi:plus"
               tap_action:
-                action: "call-service"
-                service: "climate.set_temperature"
-                service_data:
+                action: "perform-action"
+                perform_action: "climate.set_temperature"
+                target:
+                  entity_id: "[[[ return entity.entity_id ]]]"
+                data:
                   target_temp_low: |
                     [[[
                       const unit = hass.config.unit_system.temperature
@@ -410,7 +403,6 @@ card_broadlink_tadiran:
                       const new_temp = (parseFloat(entity.attributes.target_temp_low) + step)
                       return (new_temp + variables.ulm_card_thermostat_minimum_temp_spread > entity.attributes.target_temp_high ? new_temp + variables.ulm_card_thermostat_minimum_temp_spread : entity.attributes.target_temp_high)
                     ]]]
-                  entity_id: "[[[ return entity.entity_id ]]]"
               state:
                 - operator: "template"
                   value: >
